Сделал все доступным, настроил анимацию меню и описания.

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#e4e5e9" />
     <meta
       name="keywords"
-      content="график рабочей недели рассчет заработка подсчет зарплаты рабочий день переработки больничный простой отпуск на работе праздники сколько заработал"
+      content="Табель рабочей недели рассчет заработка подсчет зарплаты график работы переработки больничный простой отпуск на работе праздники сколько заработал"
     />
     <meta
       name="description"
-      content="Приложение составляет рабочий график и считает ежемесячную зарплату. Настройка дня: работу, переработки, отпуска и тд"
+      content="Приложение составляет рабочий табель и считает ежемесячную зарплату. Настройка дня: работа, переработки, отпуска и тд"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Рабочий график. Составление графика и подсчет зарплаты.</title>
+    <title>Рабочий табель. Составление табеля и подсчет зарплаты.</title>
   </head>
   <body>
     <noscript>Нужно включить java-script для этого приложения!</noscript>
