--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       name="description"
       content="Приложение составляет рабочий табель и считает ежемесячную зарплату. Настройка дня: работа, переработки, отпуска и тд"
     />
+    <meta name="yandex-verification" content="bc2d4434daab9d54" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Рабочий табель. Составление табеля и подсчет зарплаты.</title>
